--- a/src/views/notes/index.ejs
+++ b/src/views/notes/index.ejs
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes App</title>
-  </head>
-  <body>
-    <header><h1>Welcome User</h1></header>
+</head>
+
+<body>
+    <header>
+        <h1>Welcome User</h1>
+    </header>
     <main>
         <section>
+            <button class="btn btn-add-note">Create a new note</button>
+        </section>
+        <section class="notes-grid">
             <% for (let i = 0; i <data.length;i++){ %>
                 <article>
-                    <h2><%- data[i].title %></h2>
-                    <p><%- data[i].description %></p>  %> </p>
+                    <h2>
+                        <%- data[i].title %>
+                    </h2>
+                    <p>
+                        <%- data[i].description %>
+                    </p>
                 </article>
-                <% }  %>  
-            <article></article>
+                <% }  %>
         </section>
     </main>
     <footer></footer>
-  </body>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="main.js" type="text/javascript"></script>
+</body>
+
 </html>
