delete with new notes added

--- a/src/views/notes/index.ejs
+++ b/src/views/notes/index.ejs
@@ -17,7 +17,7 @@
         <section>
             <form class="form form-new-note">
                 <input placeholder="Title" type="text" class="note-title" id="input-note-title">
-                <textarea name="" id="text-area-note-description" cols="30" rows="5" class="note-description"></textarea>
+                <textarea id="text-area-note-description" cols="30" rows="5" class="note-description" placeholder="Description"></textarea>
                 <button class="btn btn-add-note">Create a new note</button>
             </form>
         </section>
