updated almost done - doesnt work updating the other pages with socket.io

--- a/public/styles.css
+++ b/public/styles.css
@@ -7,3 +7,9 @@
     flex-direction: column;
     width: 300px;
 }
+
+.content {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
