--- a/src/views/notes/index.ejs
+++ b/src/views/notes/index.ejs
@@ -41,8 +41,9 @@
     <footer></footer>
     <!-- Previamente importar jQuery -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src='scripts/ui.js'></script>
-    <script src="scripts/main.js" type="text/javascript"></script>
+    <script src="./scripts/helpers.js"></script>
+    <script src='./scripts/ui.js'></script>
+    <script src="./scripts/main.js" type="text/javascript"></script>
 </body>
 
 </html>
